--- a/index.html
+++ b/index.html
@@ -381,6 +381,8 @@
     });
 
     // regression function
+
+    // function from Stack Overflow: https://stackoverflow.com/questions/20507536/d3-js-linear-regression
     function linearRegression(y,x){
 
         var lr = {};
