--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     </style>
 </head>
 <body>
+  <h3 style="text-align: center;">Project 2: Trees, Air Quality & Poverty in NYC</h3>
   <div class="flex-row">
     <div style="padding-left: 20px">
-      <h3> Trees and Air Quality in an Urban World</h3>
+      <h3> Trees vs Air Quality Choropleth Map</h3>
       <p> 
         A Map of NY with the distribution of trees. Each green circle of the map represents an individual tree. 
         The map is colored accorrding to the air particles in the corresponding community district. The legend above shows
@@ -49,10 +50,7 @@
             <h5> Air Quality Scale (Particle Concentration - PM2.5) </h5>
             <svg id="colorLegend" height="75" width="400" style="background: #fff" ></svg>
           </div>
-          <div style="padding-left: 150px">
-            <h5> Scatterplot Legend </h5>
-            <svg id="scatterplotLegend" height="160" width="100" style="background: #fff" ></svg>
-          </div>
+
         </div>
       </div>
     </div>
@@ -67,6 +65,11 @@
         <svg id="scatterplot-poverty-air" height="270" width="560"></svg>
         <svg id="scatterplot-air-trees" height="270" width="560"></svg>
       </div>
+      
+    </div>
+    <div style="padding-right: 150px; padding-top:400px">
+      <h5> Scatterplot Legend </h5>
+      <svg id="scatterplotLegend" height="160" width="100" style="background: #fff" ></svg>
     </div>
   </div>
 </body>
