Added padding to divs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <h2 style="text-align: center;">INFO 3300 Project 2: Trees, Air Quality, & Poverty in NYC</h2>
   <h4 style="text-align: center;">Eric Freitag (eef49), Dana Gong (dg588), Jiadi Huang (jh2649), Mei-Jen Lee (ml2298)</h4>
   <div class="flex-row">
-    <div style="padding-left: 20px">
+    <div style="padding-right: 30px">
       <h3> Trees vs. Air Quality Choropleth Map</h3>
       <p> 
         A map of New York City air quality and tree distribution. Each green circle on the map represents an individual tree. 
